Updating Xin Zhi Khoo's photo

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -5,7 +5,7 @@
   group: 0
 
 - name: Xin Zhi Khoo
-  photo: xinzhikhoo.png
+  photo: xinzhikhoo.jpg
   info: Master Student
   url: xinzhikhoo
   group: 1
