--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
-
+- date: January 22nd, 2023
+  headline: "We are excited to welcome <a href='team/xinzhikhoo'>Xin Zhi Khoo</a> as a master student in The Fungal Ecology Lab. Xin Zhi will work on the population and host diversity of <i>Rhizoctonia</i> spp. in Nebraska."
+- date: December 20th, 2022
+  headline: "Congratulations and farewell to <a href='team/mariegisele'>Marie Gisele</a>, who obtained her B.Sc. degree this month!! Good luck in your future endeavors!"
 - date: December 5th, 2022
   headline: "New paper from our PI. One of Dr. Garcia-Aroca's papers from his PhD work at Louisiana State University was just published in Plant Health Progress: <a href='https://apsjournals.apsnet.org/doi/10.1094/PHP-03-22-0021-RS'>Secondary Metabolites Produced by <i>Xylaria necrophora</i> Are Responsible for Foliar Symptoms Associated with Taproot Decline of Soybean</a>! Congratulations, Dr. Garcia-Aroca."
 - date: October 30, 2022
