--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
-- date: January 22nd, 2023
+- date: Aug 24, 2022
+  headline: "Welcome back to the Fungal Ecology Lab, <a href='team/mariegisele'>mariegisele</a>! Gisele has re-joined our lab as a technical assistant and we are very excited to have her back"
+- date: March 10, 2023
   headline: "We are excited to welcome <a href='team/xinzhikhoo'>Xin Zhi Khoo</a> as a master student in The Fungal Ecology Lab. Xin Zhi will work on the population and host diversity of <i>Rhizoctonia</i> spp. in Nebraska."
 - date: December 20th, 2022
   headline: "Congratulations and farewell to <a href='team/mariegisele'>Marie Gisele</a>, who obtained her B.Sc. degree this month!! Good luck in your future endeavors!"
