--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -16,8 +16,14 @@
   url: karissarieck
   group: 2
 
+- name: Karissa Rieck
+  photo: karissarieck.png
+  info: Undergraduate Researcher
+  url: karissarieck
+  group: 2
+
 - name: Marie Gisele Shimwa
   photo: mariegisele.png
-  info: Undergraduate Researcher
+  info: Research Assistant
   url: mariegisele
-  group: 8
+  group: 9
