Updating elizabeth and news

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -16,10 +16,10 @@
   url: karissarieck
   group: 2
 
-- name: Karissa Rieck
-  photo: karissarieck.png
+- name: Elizabeth Chhoeung
+  photo: elizabeth.chhoeung.jpg
   info: Undergraduate Researcher
-  url: karissarieck
+  url: elizabethchhoeung
   group: 2
 
 - name: Marie Gisele Shimwa
